load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

esbuild(
    name = "lib",
    srcs = [
        "main.js",
        "name.js",
    ],
    entry_point = "main.js",
    metafile = True,
)

build_test(
    name = "test",
    targets = [":lib"],
)

sh_test(
    name = "metafile_test",
    size = "small",
    srcs = [
        "metafile_test.sh",
    ],
    args = [
        "$(locations :lib)",
    ],
    data = [
        ":lib",
    ],
)