bazel_dep(name = "aspect_rules_esbuild", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "aspect_rules_esbuild",
    path = "../..",
)

# NOTE: rules_nodejs 6.7.3 dev version for bazel 9.0.1 compat
bazel_dep(name = "rules_nodejs", version = "6.7.3", dev_dependency = True, repo_name = None)
bazel_dep(name = "bazel_lib", version = "3.2.2", dev_dependency = True)
