"Bazel dependencies"
bazel_dep(name = "aspect_rules_esbuild", dev_dependency = True, version = "0.0.0")
bazel_dep(name = "aspect_rules_js", dev_dependency = True, version = "1.23.1")
bazel_dep(name = "bazel_skylib", version = "1.4.1")

local_path_override(
    module_name = "aspect_rules_esbuild",
    path = "../..",
)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)

use_repo(npm, "npm")