"Bazel dependencies"

bazel_dep(name = "aspect_rules_esbuild", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "aspect_rules_js", version = "1.29.2", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.4.1")

local_path_override(
    module_name = "aspect_rules_esbuild",
    path = "../..",
)

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
    dev_dependency = True,
)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")
