bazel_dep(name = "aspect_rules_esbuild", version = "0.0.0")
local_path_override(
    module_name = "aspect_rules_esbuild",
    path = "../..",
)

bazel_dep(name = "rules_shell", version = "0.4.1")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.45.0")

# NOTE: rules_nodejs 6.7.3 dev version for bazel 9.0.1 compat
bazel_dep(name = "rules_nodejs", version = "6.7.3", dev_dependency = True, repo_name = None)
bazel_dep(name = "bazel_skylib", version = "1.5.0", dev_dependency = True)

go_tool_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_tool_deps.from_file(go_mod = "//tools:go.mod")
use_repo(go_tool_deps, "com_github_evanw_esbuild")

register_toolchains("//toolchains:all")
