load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

exports_files(
    ["launcher.js"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "esbuild",
    srcs = ["esbuild.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":helpers",
        "@aspect_bazel_lib//lib:copy_to_bin",
        "@aspect_bazel_lib//lib:expand_make_vars",
        "@aspect_rules_js//js:libs",
        "@aspect_rules_js//js:providers",
    ],
)

bzl_library(
    name = "helpers",
    srcs = ["helpers.bzl"],
    visibility = ["//esbuild:__subpackages__"],
    deps = ["@bazel_skylib//lib:paths"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//esbuild:__subpackages__"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//esbuild:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//esbuild:__subpackages__"],
)
