"Example from https://esbuild.github.io/content-types/#css-from-js"

load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")

esbuild(
    name = "with_css",
    srcs = ["button.css"],
    config = {
        "keepNames": True,
        "resolveExtensions": [
            ".jsx",
        ],
    },
    entry_point = "app.jsx",
    output_css = "with_css.css",
)

write_source_files(
    name = "assertions",
    files = {
        "css.expected": "with_css.css",
        "js.expected": "with_css.js",
    },
)
