load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@esbuild_plugins//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

esbuild(
    name = "bundle",
    srcs = [
        "logo.svg",
        ":node_modules/esbuild-plugin-svg",
    ],
    config = "esbuild.config.mjs",
    entry_point = "main.js",
)
