load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@bazel_skylib//rules:write_file.bzl", "write_file")

# A named + linked library
npm_package(
    name = "npm_package",
    srcs = [
        "src/lib.js",
        ":_package_json",
    ],
    package = "@test-example/lib",
    visibility = ["//visibility:public"],
)

write_file(
    name = "_package_json",
    out = "package.json",
    content = ["""{"name": "@test-example/lib", "main": "./src/lib.js"}"""],
    visibility = ["//visibility:public"],
)
